log-schemas/27.5/opcua_binary.rst
``opcua_binary`` field reference
--------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``opcua_link_id`` (string)
     - The opcua_link_id information.

   * - ``msg_type`` (string)
     - The msg_type information.

   * - ``is_final`` (string)
     - The is_final information.

   * - ``msg_size`` (integer - count)
     - The msg_size information.

   * - ``error`` (integer - count)
     - The error information.

   * - ``reason`` (string)
     - The reason information.

   * - ``version`` (integer - count)
     - The version information.

   * - ``rcv_buf_size`` (integer - count)
     - The rcv_buf_size information.

   * - ``snd_buf_size`` (integer - count)
     - The snd_buf_size information.

   * - ``max_msg_size`` (integer - count)
     - The max_msg_size information.

   * - ``max_chunk_cnt`` (integer - count)
     - The max_chunk_cnt information.

   * - ``endpoint_url`` (string)
     - The endpoint_url information.

   * - ``sec_channel_id`` (integer - count)
     - The sec_channel_id information.

   * - ``sec_policy_uri_len`` (integer - int)
     - The sec_policy_uri_len information.

   * - ``sec_policy_uri`` (string)
     - The sec_policy_uri information.

   * - ``snd_cert_len`` (integer - int)
     - The snd_cert_len information.

   * - ``snd_cert`` (string)
     - The snd_cert information.

   * - ``rcv_cert_len`` (integer - int)
     - The rcv_cert_len information.

   * - ``rcv_cert`` (string)
     - The rcv_cert information.

   * - ``seq_number`` (integer - count)
     - The seq_number information.

   * - ``request_id`` (integer - count)
     - The request_id information.

   * - ``encoding_mask`` (integer - count)
     - The encoding_mask information.

   * - ``namespace_idx`` (integer - count)
     - The namespace_idx information.

   * - ``identifier`` (integer - count)
     - The identifier information.

   * - ``identifier_str`` (string)
     - The identifier_str information.

   * - ``req_hdr_node_id_type`` (string)
     - The req_hdr_node_id_type information.

   * - ``req_hdr_node_id_namespace_idx`` (integer - count)
     - The req_hdr_node_id_namespace_idx information.

   * - ``req_hdr_node_id_numeric`` (integer - count)
     - The req_hdr_node_id_numeric information.

   * - ``req_hdr_node_id_string`` (string)
     - The req_hdr_node_id_string information.

   * - ``req_hdr_node_id_guid`` (string)
     - The req_hdr_node_id_guid information.

   * - ``req_hdr_node_id_opaque`` (string)
     - The req_hdr_node_id_opaque information.

   * - ``req_hdr_timestamp`` (time)
     - The req_hdr_timestamp information.

   * - ``req_hdr_request_handle`` (integer - count)
     - The req_hdr_request_handle information.

   * - ``req_hdr_return_diag`` (integer - count)
     - The req_hdr_return_diag information.

   * - ``req_hdr_audit_entry_id`` (string)
     - The req_hdr_audit_entry_id information.

   * - ``req_hdr_timeout_hint`` (integer - count)
     - The req_hdr_timeout_hint information.

   * - ``req_hdr_add_hdr_type_id`` (integer - count)
     - The req_hdr_add_hdr_type_id information.

   * - ``req_hdr_add_hdr_enc_mask`` (integer - count)
     - The req_hdr_add_hdr_enc_mask information.

   * - ``res_hdr_timestamp`` (time)
     - The res_hdr_timestamp information.

   * - ``res_hdr_request_handle`` (integer - count)
     - The res_hdr_request_handle information.

   * - ``status_code_link_id`` (string)
     - The status_code_link_id information.

   * - ``res_hdr_service_diag_encoding`` (integer - count)
     - The res_hdr_service_diag_encoding information.

   * - ``res_hdr_add_hdr_type_id`` (integer - count)
     - The res_hdr_add_hdr_type_id information.

   * - ``res_hdr_add_hdr_enc_mask`` (integer - count)
     - The res_hdr_add_hdr_enc_mask information.
